# tera

./: .gitignore  Makefile  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  pyproject.toml  run_migrations.py
.github/codeql/: codeql-config.yml
.github/workflows/: dependency-scan.yml  sast-scan.yml  test.yml
.trunk/: trunk.yaml
alembic/: env.py
alembic/versions/: 001_split_user_fullname.py  002_create_module_settings_table.py  003_create_module_status_table.py
app/: main.py
app/core/: config.py  database.py
app/models/: __init__.py  company.py  employee.py  user.py
app/modules/: __init__.py
app/modules/company/: __init__.py  models.py  router.py  setup.py
app/modules/core/: __init__.py  document_engine.py  models.py  module.py
app/modules/employees/: router.py  schema.py
app/modules/finance/: __init__.py  documents.py  models.py  router.py
app/modules/payroll/: README.md  __init__.py  models.py  router.py
app/modules/users/: __init__.py  router.py  schema.py  setup.py
app/routers/: __init__.py  companies.py  employees.py  modules.py  users.py
app/schemas/: __init__.py  company.py  employee.py  user.py
app/scripts/: init_db.py  seed_data.py
app/utils/: jwt.py
docs/: MODULE_SYSTEM_AND_UI_FACTORY.md
tera/: main.py
tera/core/: database.py  localization.py
tera/modules/company/: __init__.py  models.py  router.py  (+1 more)
tera/routers/: localization.py  modules.py  reference.py
tera/scripts/: init_db.py  seed_data.py
tera/utils/: jwt.py  security.py
tests/: README.md  __init__.py  conftest.py  test_company.py  test_employees.py  test_finance.py  test_payroll.py  test_users.py
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css
(+112 files in other folders)
